# lighthouse2-nrc-refactor

./: .gitignore  CMakeLists.txt
apps/: .gitignore  CMakeLists.txt
apps/_shareddata/: DTS_nrc.glb
apps/nrcapp/: CMakeLists.txt  camera.xml  imgui.ini  main.cpp  main_tools.h
apps/tinyapp/: CMakeLists.txt
etc/: CUDAToolkitConfig.cmake
lib/: CMakeLists.txt
lib/CUDA/: CMakeLists.txt
lib/CUDA/shared_host_code/: cudatools.cpp  cudatools.h
lib/CUDA/shared_kernel_code/: tools_shared.h
lib/FreeImage/: CMakeLists.txt
lib/OptiX7/: CMakeLists.txt
lib/RenderCore_Optix7NRC/: AuxRTMgr.cpp  AuxRTMgr.h  CMakeLists.txt  core_settings.h  nrcNetANN.h  nrcNetKNN.cpp  nrcNetKNN.h  nrcNetTCNN.h  nrcNetTorch.h  rendercore.cpp  rendercore.h
lib/RenderCore_Optix7NRC/kernels/: .cuda.cu  .cuda.h  auxRT.h  debugview.h  nrcEnhancedPathTracer.h  nrcNetTCNNImpl.h  nrcPathTracer.h  pathtracer.h  refPathTracer.h
lib/RenderCore_Optix7NRC/optix/: .optix.cu  .optix.turing.cu.ptx
lib/RenderSystem/: CMakeLists.txt  common_types.h  core_api_base.cpp  core_api_base.h  host_mesh.cpp  host_meshloaders.cpp  host_node.cpp  host_node.h  host_scene.cpp  render_api.cpp  render_api.h  rendersystem.h
lib/ann/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/half2.2.0/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/implot/: CMakeLists.txt
lib/platform/: CMakeLists.txt
lib/rendercore_optix7/: CMakeLists.txt  rendercore.cpp  rendercore.h
lib/sharedBSDFs/: CMakeLists.txt
lib/taskflow/: CMakeLists.txt
lib/tiny-cuda-nn/: CMakeLists.txt
lib/tiny-cuda-nn/include/tiny-cuda-nn/: common_device.h
lib/tinygltf/: CMakeLists.txt
lib/tinyxml2/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
